rent/chart/templates/gateway-api.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rent
  annotations:
    dev.okteto.com/generate-host: movies
spec:
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /rent
    backendRefs:
    - name: rent
      port: 8080
